--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
+certifi==2018.11.29
+chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+get==2018.11.19
 gunicorn==19.9.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
+post==2018.11.20
+public==2018.11.20
+pymessenger==0.0.7.0
+query-string==2018.11.20
+request==2018.11.20
+requests==2.21.0
+requests-toolbelt==0.9.1
+six==1.12.0
+urllib3==1.24.1
 Werkzeug==0.14.1
