--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
+attrs==18.2.0
+beautifulsoup4==4.7.1
+bs4==0.0.1
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
 get==2018.11.19
+gnewsclient==1.1.0
 gunicorn==19.9.0
+html5lib==1.0.1
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
 post==2018.11.20
+prompt-toolkit==2.0.8
 public==2018.11.20
 pymessenger==0.0.7.0
+pymessenger2==3.1.0
 query-string==2018.11.20
 request==2018.11.20
 requests==2.21.0
 requests-toolbelt==0.9.1
 six==1.12.0
+soupsieve==1.8
 urllib3==1.24.1
+wcwidth==0.1.7
+webencodings==0.5.1
 Werkzeug==0.14.1
+wit==5.1.0
